2006-07-23 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp
	(request_data_available(GIOChannel *, GIOCondition, gpointer)):
	Made arguments const.

2006-07-23 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp
	(PluginInstance::SetWindow(NPWindow &)): Use g_malloc0 to
	zero-initialize the allocated memory for openvrml_player_cmd_argv.

2006-07-23 Braden McDaniel  <braden@endoframe.com>

	Backed out change to set the plugin_resource_istream initial state
	to invalid if the Web browser's get-url function fails.  The
	attempted solution deadlocks.

	* mozilla-plugin/src/openvrml.cpp
	* mozilla-plugin/src/openvrml-player/gtkvrmlbrowser.cpp
	* mozilla-plugin/src/openvrml-player/player.cpp
	* mozilla-plugin/src/openvrml-player/plugin_streambuf.cpp
	* mozilla-plugin/src/openvrml-player/plugin_streambuf.h

2006-07-09 Braden McDaniel  <braden@endoframe.com>

	Swallow the openvrml::no_alternative_url exception when loading
	Background node textures.

	* src/libopenvrml/openvrml/vrml97node.cpp
	(update_texture(background_node &, boost::recursive_mutex &, const
	openvrml::mfstring &, openvrml::image)): Added function; called by
	background_node::update_textures; swallow the
	openvrml::no_alternative_url exception.
	(background_node::update_textures()): Delegate to update_texture.

2006-07-08 Braden McDaniel  <braden@endoframe.com>

	Use a more compact representation for the command_streambuf.

	* mozilla-plugin/src/openvrml-player/command_istream.cpp
	(openvrml_player::command_streambuf::underflow()): Apply
	traits_type::to_char_type and traits_type::to_int_type
	consistently.
	* mozilla-plugin/src/openvrml-player/command_istream.h
	(openvrml_player::command_streambuf): Changed source_buffer_ to be
	a bounded_buffer of char_type instead of int_type.

2006-06-07 Braden McDaniel  <braden@endoframe.com>

	Provide an error handler for libjpeg; the default one calls exit.